--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
 
@@ -13,8 +14,35 @@
 
 
     <main>
-        
+        <div class="threejs-navigation threejs-elevation" data-elevation="false">
+            <div class="intro">
+                <h2>
+                    Options
+                </h2>
+            </div>
+            <ul>
+                <li>
+                    <button class="threejs-button" data-fct="automatic-rotate">
+                        Tourne automatiquement
+                    </button>
+                </li>
+            </ul>
+
+            <hr>
+
+            <ul class="threejs-options" data-part="left" data-fct="changepart">
+                <li class="threejs-options__li example">
+                    <button class="threejs-button">Ici</button>
+                </li>
+            </ul>
+
+            <ul class="threejs-options" data-part="right" data-fct="changepart">
+                <li class="threejs-options__li example">
+                    <button class="threejs-button">Ici</button>
+                </li>
+            </ul>
+        </div>
     </main>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/public/js/main.js"></script>
 </body>
 </html>
