--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
             <hr>
 
             <ul class="threejs-options" data-part="left" data-fct="changepart">
-                <li class="threejs-options__li example">
+                <li class="threejs-options__li threejs-example">
                     <button class="threejs-button">Ici</button>
                 </li>
             </ul>
 
             <ul class="threejs-options" data-part="right" data-fct="changepart">
-                <li class="threejs-options__li example">
+                <li class="threejs-options__li threejs-example">
                     <button class="threejs-button">Ici</button>
                 </li>
+            </ul>
+
+
+            <hr>
+
+
+            <ul class="threejs-options" data-fct="changetexture">
+
             </ul>
         </div>
     </main>
